--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@ I declare that my assessment is wholly my own work in accordance with Seneca Aca
  -->
 
 <!DOCTYPE html>
-<html lang="en">s
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
