Added YouTube video

--- a/expertise.html
+++ b/expertise.html
@@ -63,8 +63,10 @@ I declare that my assessment is wholly my own work in accordance with Seneca Aca
               </table>
               <h2 class="showcase">Front-end (AJAX) App Showcase</h2>
               <div class="cards">
-                </article>
-            </div>
+              </div>
+              <h2 class="showcase">DeepFake Technology</h2>
+              <p>Enjoy my presentation about the DeepFake technology which I created for my CPR class. Hope you learn something from this video.</p>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/aGiUIyvdybY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </main>
     <div class="clear"></div>
